--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -123,7 +123,7 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: #000;
+    background-image: url('tweed.png')
   }
 
   .errors {
