--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -9,10 +9,10 @@
 
     .search_box
       .select_search_div
-        %select{name:'category',id:'searchCategory'}
-          %option{value:'location'}= "LOCATION".html_safe
-          %option{value:'people'} PEOPLE
-          %option{value:'category'} CATEGORY
+        %input{type:'text',style:'display:none',id:'searchCategory',value:'category'}
+        %img{id: 'location', src:'https://s3-eu-west-1.amazonaws.com/ehxe/markers/aqua_marker.png', data: { value: 'location'}}
+        %img{id: 'category', src:'https://s3-eu-west-1.amazonaws.com/ehxe/markers/aqua_marker.png', data: { value: 'category'}}
+        %img{id: 'people', src:'https://s3-eu-west-1.amazonaws.com/ehxe/markers/aqua_marker.png', data: { value: 'people'}}
       .search_input_div
         %input{type:'text',name:'query',id:'searchQuery',placeholder:"SEARCH"}
 
