clean up of dash code

--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -10,9 +10,9 @@
     .search_box
       .select_search_div
         %input{type:'text',style:'display:none',id:'searchCategory',value:'category'}
-        %img{id: 'location', src:'https://s3-eu-west-1.amazonaws.com/ehxe/markers/aqua_marker.png', data: { value: 'location'}}
-        %img{id: 'category', src:'https://s3-eu-west-1.amazonaws.com/ehxe/markers/aqua_marker.png', data: { value: 'category'}}
-        %img{id: 'people', src:'https://s3-eu-west-1.amazonaws.com/ehxe/markers/aqua_marker.png', data: { value: 'people'}}
+        %img{id: 'location', src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Location_icon_search_20px.png', data: { value: 'location'}}
+        %img{id: 'category', src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Properties-24%2B(2).png', data: { value: 'category'}}
+        %img{id: 'people', src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People_icon_search_20px.png', data: { value: 'people'}}
       .search_input_div
         %input{type:'text',name:'query',id:'searchQuery',placeholder:"SEARCH"}
 
