--- a/app/assets/stylesheets/signin_login.css.scss
+++ b/app/assets/stylesheets/signin_login.css.scss
@@ -11,7 +11,7 @@
 .title {
   color: #fff;
   font-size: 2em;
-  font-family: "Perpetua", "Garamond";
+  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
   margin-bottom: 2%;
 }
 
@@ -42,7 +42,7 @@ input {
   border: none;
   background-color: transparent;
   color: #fff;
-  font-family: "Perpetua";
+  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
   font-size: 1.2em;
 }
 
@@ -50,7 +50,7 @@ input {
 #password_field,
 #name_field,
 #password_conf_field {
-  font-family: "Perpetua";
+  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
   position: relative;
   text-align: center;
 }
