--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -15,4 +15,4 @@
       .password_field_tag
         = f.password_field :password_confirmation, placeholder: ' PASSWORD CONFIRMATION', required: true
     .field.actions.login
-      = f.submit 'Sign Up', class: 'submit_button'
+      = f.submit 'SIGN UP', class: 'submit_button'
