--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -47,7 +47,7 @@
   width: 10%;
   margin: 2% auto;
   display: inline block;
-  font-family: "Sinhala MN", "Sinhala Sangam MN", "Perpetua", "Garamond"
+  font-family: "Sinhala MN", "Sinhala Sangam MN", "Perpetua", "Garamond";
 }
 
 #signup_home {
