--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -1,32 +1,32 @@
 = nested_form_for @checkin do |f|
   = render 'partials/errors', resource: @checkin
 
-  .title_field
-    = f.text_field :title, placeholder: ' Title', required: true
-    - if params[:action] === 'past' || params[:action] === 'edit'
-      = f.date_select :date
-
   #map{data: { id: @id } }
 
   = f.hidden_field :latitude
   = f.hidden_field :longitude
   - default_x = "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/x_icon.png"
 
+  .title_field
+    = f.text_field :title, placeholder: ' TITLE', required: true
+    - if params[:action] === 'past' || params[:action] === 'edit'
+      = f.date_select :date
+
   #checkin_inventory
     .checkin_form_box.words
-      -if params[:action] == 'new' || params[:action] == 'past'
-        .words_overlay
-          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/words.png",  id: 'words_image'
-          %p.instructions Words
+      -# -if params[:action] == 'new' || params[:action] == 'past'
+      -#   .words_overlay
+      -#     = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/words.png",  id: 'words_image'
+      -#     %p.instructions WORDS
       .words_content
         .field#words_text_area
-          = f.text_area :description
-
-    .checkin_form_box.categories
-      = render 'checkins/form_fields/categories', f: f
+          = f.text_area :description, placeholder: 'DESCRIPTION'
 
     .checkin_form_box.assets
       = render 'checkins/form_fields/assets', f: f
+
+    .checkin_form_box.categories
+      = render 'checkins/form_fields/categories', f: f
 
     .checkin_form_box.people
       = render 'checkins/form_fields/people', f: f
