--- a/app/views/checkins/form_fields/_people.html.haml
+++ b/app/views/checkins/form_fields/_people.html.haml
@@ -1,6 +1,6 @@
-.people_overlay
-  = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People.png",  id: 'people_image'
-  %p.instructions People
+-# .people_overlay
+-#   -# = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People.png",  id: 'people_image'
+-#   %p.instructions PEOPLE
 .people_content
   - if !current_user.people.empty?
     .field
