styling to checkin forms, people and categorie show and index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,7 +55,7 @@ h1 {
 
 .center-text { text-align: center; }
 
-.field { padding: 10px 0 10px 0; }
+.field { padding: 3% 0; }
 
 .jPanelMenu-panel {
   height: 90%;
