--- a/app/assets/stylesheets/categories/index.scss
+++ b/app/assets/stylesheets/categories/index.scss
@@ -28,7 +28,7 @@
   border: none;
   background-color: transparent;
   color: #fff;
-  font-family: "Perpetua";
+  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
   font-size: 1.2em;
 }
 
@@ -39,8 +39,4 @@
 
 #category_icons {
   display: inline-block;
-}
-
-.marker {
-
 }
