--- a/app/views/checkins/form_fields/_categories.html.haml
+++ b/app/views/checkins/form_fields/_categories.html.haml
@@ -4,5 +4,6 @@
   -#   %p.instructions CATEGORIES
   .category_content
     - if !current_user.categories.empty?
-      .field
+      .field#categories_form
+        #form_field_label CATEGORIES
         = f.select :category_ids, current_user.categories.collect { |x| [x.name,x.id] }, {prompt: false}, multiple: true
