--- a/app/views/checkins/past.haml
+++ b/app/views/checkins/past.haml
@@ -1,6 +1,7 @@
 .checkin_form
 
-  %h1.center-text Past Check-In
+  .past_checkin_title
+    Past Check-In
 
   %input{type:'text',id:'location',placeholder:'Location',class: 'past_checkin_location_search'}
 
