--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -12,8 +12,9 @@
   margin-bottom: 5%;
 }
 
-.title#people {
-  font-size: 1em
+.title#people, {
+  font-size: 1em;
+  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
 }
 
 .new_person_button {
@@ -35,7 +36,7 @@
   border: none;
   background-color: transparent;
   color: #fff;
-  font-family: "Perpetua";
+  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
   font-size: 1.2em;
 }
 
@@ -44,10 +45,37 @@
   margin-right: 5%;
 }
 
-#people_icons {
+#edit_icon_people {
+  margin: auto;
+  width: 3%;
+}
+
+#people_icons, #person_icons {
   display: inline-block;
+  text-align: center;
+  margin: auto;
+  width: 100%;
 }
 
 #person_image {
   width: 50%;
+}
+
+.person {
+  width: 75%;
+  margin: auto;
+  text-align: center;
+}
+
+.name {
+  color: #fff;
+  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
+  font-size: 1em;
+  margin: 5% auto 2%;
+}
+
+#left_arrow img {
+  width: 3%;
+  margin: auto;
+  margin-top: 10%;
 }
