--- a/app/views/checkins/form_fields/_people.html.haml
+++ b/app/views/checkins/form_fields/_people.html.haml
@@ -3,5 +3,6 @@
 -#   %p.instructions PEOPLE
 .people_content
   - if !current_user.people.empty?
-    .field
+    .field#people_form
+      #form_field_label PEOPLE
       = f.select :person_ids, current_user.people.collect { |x| [x.name,x.id] }, {prompt: false}, multiple: true
