--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -5,14 +5,15 @@
         = link_to person.name, person
       .person_image
         = image_tag person.picture.detail.url, id: 'person_image'
-      .person_divs
-        -person.checkins.each do |checkin|
-          =checkin.categories.color
       .options
         .button#person_icons
           = link_to image_tag('edit_icon.png', id: 'edit_icon'), edit_person_path(person)
           = link_to image_tag('x_icon_invert.png'), person, :method => :delete, :data => { :confirm => 'Are you sure?' }
       .checkins
+        -# .person_divs
+        -#   -person.checkins.map do |checkin|
+        -#     - checkin.categories.map do |category|
+        -#       = category.color
 
 .new_person_button
-  = link_to 'New Person', new_person_path, id: "submit_new_person"
+  = link_to 'NEW PERSON', new_person_path, id: "submit_new_person"
