fixing padding on login page

--- a/app/assets/stylesheets/signin_login.css.scss
+++ b/app/assets/stylesheets/signin_login.css.scss
@@ -80,4 +80,6 @@ input#user_password_confirmation {
 #_sessions_email,
 #_sessions_password {
   text-align: center;
+  width: 30%;
+  padding: 1%;
 }
