--- a/app/views/checkins/past.haml
+++ b/app/views/checkins/past.haml
@@ -1,9 +1,6 @@
 .checkin_form
 
-  .past_checkin_title
-    Past Check-In
-
-  %input{type:'text',id:'location',placeholder:'Location',class: 'past_checkin_location_search'}
+  %input{type:'text',id:'location',placeholder:'SEARCH FOR A LOCATION TO EHXE',class: 'past_checkin_location_search'}
 
   = render 'form'
 
