--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -9,6 +9,8 @@
 
   .title_field
     = f.text_field :title, placeholder: ' TITLE', required: true
+
+  .date_field
     - if params[:action] === 'past' || params[:action] === 'edit'
       = f.date_select :date
 
