--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,12 +1,13 @@
 %ul
   - if current_user
-    %li= link_to 'Dash', checkins_path
-    %li= link_to 'New Ehxe', new_checkin_path
-    %li= link_to 'Past Ehxe', past_checkin_path
-    %li= link_to 'Categories', categories_path
-    %li= link_to 'People', people_path
-    %li= link_to 'Account', edit_user_path(current_user)
-    %li= link_to 'Logout', session_path(session), method: :delete, data: {confirm: 'Are you sure?'}
+    %li
+    %li= link_to 'DASH', checkins_path
+    %li= link_to 'NEW EHXE', new_checkin_path
+    %li= link_to 'PAST EHXE', past_checkin_path
+    %li= link_to 'CATEGORIES', categories_path
+    %li= link_to 'PEOPLE', people_path
+    %li= link_to 'ACCOUNT', edit_user_path(current_user)
+    %li= link_to 'LOGOUT', session_path(session), method: :delete, data: {confirm: 'Are you sure?'}
   - else
     %li= link_to 'Sign up', new_user_path
     %li= link_to 'Login', sign_in_path
