change to homepage

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,8 +14,9 @@
   %body{data: {page: [controller_name.capitalize, action_name.capitalize].join} }
 
     .container
-      #navbar
-        = render 'layouts/navbar'
+      -if current_user
+        #navbar
+          = render 'layouts/navbar'
 
       .content
         -if current_user
