past checkin search box

--- a/app/views/checkins/past.haml
+++ b/app/views/checkins/past.haml
@@ -1,6 +1,6 @@
 .checkin_form
 
-  %input{type:'text',id:'location',placeholder:'SEARCH FOR A LOCATION TO EHXE',class: 'past_checkin_location_search'}
+  %input{type:'text',id:'location',placeholder:'SEARCH FOR LOCATION',class: 'past_checkin_location_search'}
 
   = render 'form'
 
