--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
         -if current_user
           .top_bar
             = link_to image_tag('Ehxe_logo_name.png', id: 'logo_name'),  checkins_path
-            = image_tag 'http://www.acceleratedtaxsolutions.com/sites/default/themes/ats/images/menu-icon.png', class: 'menu_icon'
+            = image_tag 'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/navbar_icon.png', class: 'menu_icon'
 
         = yield
 
