--- a/app/assets/stylesheets/checkins/checkin_form.css.scss
+++ b/app/assets/stylesheets/checkins/checkin_form.css.scss
@@ -68,6 +68,7 @@ body[data-page=CheckinsPast] form {
     margin: auto;
     text-align: center;
     margin-top: 1%;
+    padding: 5px 15px 0px;
     font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
   }
 
@@ -168,22 +169,6 @@ body[data-page=CheckinsPast] form {
   height: 50%;
   width: 49%;
 }
-
-// .people.checkin_form_box, .people_overlay, .people_content {
-//   background-color: #767E7F;
-// }
-
-// .categories.checkin_form_box, .category_overlay, .category_content{
-//   background-color: #95B2BB;
-// }
-
-// .words.checkin_form_box, .words_overlay , .words_content{
-//   background-color: #998080;
-// }
-
-// .assets.checkin_form_box, .add_media_overlay, #assets_image, .add_media {
-//   background-color: #D2C469;
-// }
 
 .categories.checkin_form_box, .people.checkin_form_box, .assets.checkin_form_box, .words.checkin_form_box{
   border: none;
