--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -98,8 +98,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 4%;
-    min-height: 30px;
+    height: 36px;
     font-size: 1.5em;
     border: 0;
     text-align: center;
@@ -123,6 +122,7 @@
     width: 100%;
     height: 100%;
     overflow: auto;
+    top: 36px;
     background-image: url('tweed.png')
   }
 
