--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -12,7 +12,7 @@
 
   .date_field
     - if params[:action] === 'past' || params[:action] === 'edit'
-      = f.date_select :date
+      = f.date_select(:date, start_year: Time.now.year, end_year: (Time.now.year-1000))
 
   #checkin_inventory
     .checkin_form_box.words
