--- a/app/assets/stylesheets/checkins/checkin_form.css.scss
+++ b/app/assets/stylesheets/checkins/checkin_form.css.scss
@@ -10,9 +10,9 @@ body[data-page=CheckinsPast] form {
 
 .checkin_form {
   width: 100%;
-  height: 100%;
+  height: 98%;
   margin: 0 auto;
-  padding-top: 20px;
+  padding-top: 2%;
   text-align: center;
 
   form {
