--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -11,15 +11,11 @@
       .select_search_div
         %input{type:'text',style:'display:none',id:'searchCategory',value:'category'}
 
-        %img{id: 'location_red', src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Location_icon_red.png', data: { value: 'location'}}
-        %img{id: 'location', src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Location_icon_grey.png', data: { value: 'location'}}
+        %img.categoryChoice{src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Location_icon_grey.png', data: { value: 'Location'}}
 
-        %img{id: 'category_red', src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Category_icon_red.png', data: { value: 'category'}}
-        %img{id: 'category', src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Category_icon_grey.png', data: { value: 'category'}}
+        %img.categoryChoice{src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Category_icon_grey.png', data: { value: 'Category'}}
 
-        %img{id: 'people_red', src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People_icon_red.png', data: { value: 'people'}}
-        %img{id: 'people', src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People_icon_grey.png', data: { value: 'people'}}
-
+        %img.categoryChoice{src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People_icon_grey.png', data: { value: 'People'}}
 
       .search_input_div
         %input{type:'text',name:'query',id:'searchQuery',placeholder:"SEARCH"}
