--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -98,7 +98,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 36px;
+    // height: 36px;
+    min-height: 30px;
+    height: 4%;
     font-size: 1.5em;
     border: 0;
     text-align: center;
@@ -120,7 +122,7 @@
     position: absolute;
     left: 0;
     width: 100%;
-    height: 95%;
+    height: 96%;
     overflow: auto;
     top: 36px;
     background-image: url('tweed.png')
