--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,14 +17,14 @@
       -if current_user
         #navbar
           = render 'layouts/navbar'
-
-      -if current_user
         .top_bar
           = link_to image_tag('Ehxe_logo_name.png', id: 'logo_name'),  checkins_path
           = image_tag 'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/navbar_icon.png', class: 'menu_icon'
+        .content
+      -else
+        .content#home_page
 
-      .content
-        = yield
+      = yield
 
 
     = javascript_include_tag "application"
