--- a/app/assets/stylesheets/checkins/checkin_form.css.scss
+++ b/app/assets/stylesheets/checkins/checkin_form.css.scss
@@ -296,3 +296,9 @@ select option.selected {
     margin-bottom: 1%;
     margin-top: -1%;
  }
+
+ .no_people {
+    color: #fff;
+    padding: 5%;
+    font-size: 0.9em;
+ }
