--- a/app/assets/stylesheets/checkins/show.scss
+++ b/app/assets/stylesheets/checkins/show.scss
@@ -9,7 +9,7 @@
 }
 
 .title_container {
-  background-color: #fff;
+  background-color: #A9A9A9;
   width: 100%;
   padding: 1% 0;
   margin-top: 3%;
