--- a/app/assets/stylesheets/categories/index.scss
+++ b/app/assets/stylesheets/categories/index.scss
@@ -1,5 +1,5 @@
 .category_page {
-  width: 75%;
+  width: 30%;
   margin: auto;
   text-align: center;
   margin-top: 5%;
@@ -8,6 +8,12 @@
 .category {
   display: inline-block;
   width: 100%;
+  margin: auto;
+  margin-bottom: 2%;
+}
+
+#category_page_marker {
+  float: left;
 }
 
 .new_category_button {
@@ -32,11 +38,11 @@
   font-size: 1.2em;
 }
 
-#edit_icon {
+#edit_icon_cat {
   width: 5%;
-  margin-right: 25%;
+  float: right;
 }
 
-#category_icons {
-  display: inline-block;
+#delete_icon_cat {
+  float: right;
 }
