new category page styling

--- a/app/assets/stylesheets/signin_login.css.scss
+++ b/app/assets/stylesheets/signin_login.css.scss
@@ -38,7 +38,7 @@ input {
 }
 
 #login_submit,
-.submit_button {
+.submit_button, {
   border: none;
   background-color: transparent;
   color: #fff;
