--- a/app/assets/stylesheets/categories/edit.scss
+++ b/app/assets/stylesheets/categories/edit.scss
@@ -1,6 +1,6 @@
 .edit_category,
 .new_category {
-  width: 50%;
+  width: 35%;
   margin: 0 auto;
 
   .title {
@@ -17,6 +17,16 @@
   form {
     width: 100%;
     text-align: center;
+
+    #new_category_title {
+      width: 100%;
+      margin-top: 8%;
+      padding: 0;
+    }
+
+    #marker_color_select {
+      margin-top: 2%;
+    }
 
     #category_name {
       width: 99%;
@@ -55,45 +65,56 @@
       }
     }
 
-    input[type="submit"] {
-      width: 100%;
-      background: #C95858;
+  .actions.category {
+    padding: 1%;
+    background-color: purple;
+    border-radius: 3px;
+    width: 98%;
+    margin: 1% auto;
+    -webkit-transition: all 1s ease-in;
+    -moz-transition: all 1s ease-in;
+    -o-transition: all 1s ease-in;
+    -ms-transition:all 1s ease-in;
+    transition: all 1s ease-in;
+    margin-top: 2%;
+  }
+
+    #category_submit {
       border: none;
-      color: white;
-      font-weight: 800;
-      font-size: 1.3em;
-      border-radius: 3px;
-    }
-    .field:nth-child(3) {
-      padding-top: 0;
+      background-color: transparent;
+      color: #fff;
+      font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
+      font-size: 1.2em;
     }
   }
 
   .options {
-    height: 100px;
     text-align: center;
     padding-top: 2%;
 
     .button:first-child{
-      margin-right: 3px;
+      margin: auto;
+      background-color: #A9a9a9;
     }
   }
 }
 
 .edit_category .button {
-  height: 30px;
   width: 49.6%;
-  padding-top: 11px;
   border-radius: 3px;
   background: #5BBD96;
   float: left;
 }
 
 .new_category .button {
-  height: 30px;
-  width: 49.6%;
-  padding-top: 11px;
+  width: 35%;
+  height: 25%;
   border-radius: 3px;
   background: #5BBD96;
   margin: 0;
+  padding: 2%;
+}
+
+.actions.category {
+  margin-top: 2%;
 }
