removed show link from category edit page

--- a/app/views/categories/edit.html.haml
+++ b/app/views/categories/edit.html.haml
@@ -2,7 +2,5 @@
   = render 'form'
 
   .options
-    .button
-      = link_to 'Show', @category
-    .button
+    .button#back
       = link_to 'Back', categories_path
